Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-90683

Some keyboard shortcuts will crash Qt when matching is attempted on macOS 10.15 or higher

XMLWordPrintable

    • macOS
    • 7c85a45fde5dd3f84eb033261ccb0d54ee72d30c (qt/qtbase/dev) cdeed3f2ad5c59cfd5b6542033fd8f39567a3890 (qt/qtbase/6.0) 7bdb824b2f1632b9a441639df41b3199416f402a (qt/qtbase/6.1)

      Build and run the attached test app against Qt 6.0.0. It registers an action with shortcut 'Alt-§'. This is the top-left-most key on the keyboard on my UK keyboard.

      Then press Opt-§ to trigger the action. It crashes in QCocoaKeyMapper::keyMapForKey when comparing the results of the Cocoa and Carbon APIs. The immediate cause is indexing into an empty string, but perhaps this suggests something wrong with the way the newer API is being used anyway.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vestbo Tor Arne Vestbø
            jlarcombe James Larcombe
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: